@@ -1,3 +1,6 @@
+* Mon Aug 07 2023 Steven Pritchard <steve@sicura.us> - 0.4.0
+- Add AlmaLinux 8 support
+
 * Mon Jun 12 2023 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.3.0
 - Add RockyLinux 8 support
 
